adding command listing at the beginning of the file

--- a/index.html
+++ b/index.html
@@ -13,6 +13,23 @@
   <div class="block block-title">
     <h1>Linux - commandes fondamentales</h1>
     <p>Un petit guide pour bien démarrer avec Linux.</p>
+    <ul>
+      <li>ls</li>                                
+      <li>cd</li> 
+      <li>mv</li>
+      <li>rm</li>
+      <li>mkdir</li>           
+      <li>chmod</li>
+      <li>chown</li> 
+      <li>aptitude</li>
+      <li>ssh</li>
+      <li>rsync</li>    
+      <li>sed</li>
+      <li>grep</li>
+      <li>find</li>                                               
+      <li>Processus</li>
+      <li>Archives</li>
+    </ul>
     <img alt="" src="img/arrow.png">
   </div>
 
