--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<title>Linux, commandes fondamentales</title>
-    <link href='http://fonts.googleapis.com/css?family=Chelsea+Market' rel='stylesheet' type='text/css'>  
+    <link href='http://fonts.googleapis.com/css?family=Chelsea+Market|Dancing+Script' rel='stylesheet' type='text/css'>  
 	  <link rel="stylesheet" href="css/style.css" type="text/css">
 </head>
 <body>
@@ -12,7 +12,7 @@
 
   <div class="block block-title">
     <h1>Linux - commandes fondamentales</h1>
-    <p>Un petit guide pour bien démarrer avec Linux.</p>
+    <h3>Un petit guide pour bien démarrer avec Linux.</h3>
     <ul>
       <li>ls</li>                                
       <li>cd</li> 
@@ -32,15 +32,6 @@
     </ul>
     <img alt="" src="img/arrow.png">
   </div>
-
-
-  <a name="X"></a>
-  <div class="block block-X">
-    <h2></h2>
-    <p>
-    </p>
-  </div>
-
 
   <a name="ls"></a>
   <div class="block block-ls">
@@ -96,7 +87,7 @@
   <a name="mkdir"></a>
   <div class="block block-mkdir">
     <h2>mkdir</h2>
-    <h4>Pour créer un répertoire il suffit d’utiliser la commande mkdir. Celle-ci vous permettra de créer un répertoire à l’emplacement ou vous vous trouvez ou à l’emplacement précisé en argumente de la commande.</h4>
+    <h4>Pour créer un répertoire il suffit d’utiliser la commande <strong>mkdir</strong>. Celle-ci vous permettra de créer un répertoire à l’emplacement ou vous vous trouvez ou à l’emplacement précisé en argumente de la commande.</h4>
     <p><code>mkdir -v</code> Retourne un message pour chaque répertoire crées.</p>
     <p><code>mkdir -p</code> Cette option permet de créer une arborescence complète.</p>
     <p><code>mkdir foo</code> Création du répertoire foo.</p>
@@ -114,7 +105,7 @@
   <a name="chmod"></a>
   <div class="block block-chmod">
     <h2>chown</h2>
-    <h4>La commande chown permet de changer le propriétaire d'un fichier ou répertoire. Pour executer cette commande vous devez etre le propriétaire du fichier ou etre logué en root.</h4>
+    <h4>La commande <strong>chown</strong> permet de changer le propriétaire d'un fichier ou répertoire. Pour executer cette commande vous devez etre le propriétaire du fichier ou etre logué en root.</h4>
     <p>Methode alphanumérique</p>
     <p><code>chmod u+w fichier</code> Ajouter les droits en écriture au propriétaire (user, write)</p>
     <p><code>chmod g+r fichier</code> Ajouter les droits en lecture au groupe du fichier (group, read)</p>
@@ -151,8 +142,22 @@
   <a name="ssh"></a>
   <div class="block block-ssh">
     <h2>ssh</h2>
-    <p>
-    </p>
+    <h4>La commande <strong>ssh</strong> permet de se connecter de façon sécurisé à une machine distante.</h4>
+    <p><code>ssh john@remotehost.example.com</code> Connexion à la machine distante avec le login john.</p>
+    <p><code>ssh -l john remotehost.example.com</code> Equivaut à la commande précédente.</p>
+    <p><code>ssh-keygen -t dsa</code> Génération d'une clé DSA (à faire sur la machine locale).</p>
+    <p><code>ssh-copy-id -i ~/.ssh/id_dsa.pub john@remotehost.example.com</code> Copie de la clé publique sur la machine distante.</p>
+  </div>
+
+  <a name="scp"></a>
+  <div class="block block-scp">
+    <h2>scp</h2>
+    <h4>La commande <strong>scp</strong> permet de copier des fichiers entre le serveur et le client ssh d’une manière sécurisée.</h4>
+    <p><code>scp foo.txt john@remotehost.example.com</code> Transfert le fichier foo.txt situé dans le répertoire courant vers le home du compte john de la machine remotehost.example.com.</p>   
+    <p><code>scp john@remotehost.example.com:foo.txt</code> Récupère le fichier foo.txt situé dans le home du répertoire du compte john pour le copier dans le repertoire courant.</p>
+    <p><code>scp john@remotehost.example.com:/backups/*.sql backups/</code> Récupère tous les fichiers .sql situé dans le répertoire backups pour le copier dans le sous-repertoire backups.</p>
+    <p><code>scp -r mails/ john@remotehost.example.com/mails</code> Transfert l'intégralité du répertoire mails vers la machine remotehost.example.com.</p>   
+    
   </div>
 
   <a name="rsync"></a>
@@ -214,7 +219,7 @@
     <p><code>kill ­9 pid</code> Tuer le processus</p> 
   </div>
 
-    <a name="archives"></a>
+  <a name="archives"></a>
   <div class="block-archives">
     <h2>Archives</h2>
     <h4>Que ce soit pour compresser ou décompresser des fichiers ou des dossiers, cela se fait avec la commande <strong>tar</strong>.</h4>
