--- a/index.html
+++ b/index.html
@@ -13,23 +13,29 @@
   <div class="block block-title">
     <h1>Linux - commandes fondamentales</h1>
     <h3>Un petit guide pour bien démarrer avec Linux.</h3>
-    <ul>
+    <ul class="navlist">
       <li>ls</li>                                
       <li>cd</li> 
       <li>mv</li>
       <li>rm</li>
+    </ul>      
+    <ul class="navlist">
       <li>mkdir</li>           
       <li>chmod</li>
-      <li>chown</li> 
-      <li>aptitude</li>
+      <li>chown</li>  
+    </ul>      
+    <ul class="navlist">
+      <li>Paquets</li>
+      <li>Processus</li>
+      <li>Archives</li>
+    </ul>      
+    <ul class="navlist">
       <li>ssh</li>
       <li>rsync</li>    
       <li>sed</li>
       <li>grep</li>
       <li>find</li>                                               
-      <li>Processus</li>
-      <li>Archives</li>
-    </ul>
+    </ul> 
     <img alt="" src="img/arrow.png">
   </div>
 
@@ -132,11 +138,17 @@
   </div>
 
 
-  <a name="aptitude"></a>
-  <div class="block block-aptitude">
-    <h2>aptitude</h2>
-    <p>
-    </p>
+  <a name="Packages"></a>
+  <div class="block block-packages">
+    <h2>Packages</h2>
+    <h4>L'installation et la désinstallation de paquets peut se faire grâce à la commande <strong>apt</strong>.</h4>
+    <p><code>apt-get update</code> Mettre à jour la liste des fichiers disponibles dans les dépôts APT.</p>
+    <p><code>apt-get install samba</code> Installer du paquet Samba.</p>
+    <p><code>apt-getp install foo=2.2-1</code> Installer du paquet foo dans sa version 2.2-1.</p>
+    <p><code>apt-get remove samba</code> Désinstallation du paquet Samba tout en laissant les fichiers de configurations.</p>
+    <p><code>apt-get purge samba</code> Suppression complète du paquet Samba et de ses fichiers de configuration.</p>
+    <p><code>apt-cache policy php5</code> Récupération d'informations sur l'état du paquet php5</p>
+    <p><code>dpkg -l | grep php</code> Lister tous les paquets php installés sur la machine</p>
   </div>
 
   <a name="ssh"></a>
@@ -211,27 +223,27 @@
       <dd>-o : Opérateur OU</dd>
       <dd>! ou -not : Opérateur NOT</dd>
     </dl>  
-    <p><code>find myfile* -print</code> <br />Rechercher un fichier commençant par "myfile"</p>
-    <p><code>find -name *myfile*.txt -print</code> <br />Rechercher un fichier contenant "myfile" et ayant pour extention ".txt"</p>
-    <p><code>find . -name ".*" -print</code> <br />Rechercher tous les fichiers cachés dans le répertoire courant et ses sous répertoires.</p>
-    <p><code>find /usr -type d -print</code> <br />Afficher tous les répertoires de /usr</p>
-    <p><code>find $HOME ( -name *.txt -o -name '*.pdf' ) -atime +7 -exec rm {} \;</code> <br />Supprimer tous les fichiers .txt ou .pdf qui n'ont pas été accédés depuis plus de 7 jours dans le répertoire home de l'utilisateur.</p>
-    <p><code>find $HOME -name '*.txt' -size 4k -exec ls -l {} \;</code> <br />Affiche la taille de tous les fichiers de plus de 2 kilos</p>
+    <p><code>find myfile* -print</code><br />Rechercher un fichier commençant par "myfile"</p>
+    <p><code>find -name *myfile*.txt -print</code><br />Rechercher un fichier contenant "myfile" et ayant pour extention ".txt"</p>    
+    <p><code>find /usr -type d -print</code><br />Afficher tous les répertoires de /usr</p>
+    <p><code>find $HOME \( -name '*.txt' -o -name '*.pdf' \)</code><br />Afficher tous les fichiers .txt ou .pdf dans le répertoire home de l'utilisateur.</p>
+    <p><code>find $HOME -name *.txt -atime +7 -exec rm {} \;</code><br />Supprimer tous les fichiers .txt ou .pdf qui n'ont pas été accédés depuis plus de 7 jours dans le répertoire home de l'utilisateur.</p>    
+    <p><code>find $HOME -name '*.txt' -size +4k -exec ls -l {} \;</code><br />Affiche la taille de tous les fichiers de plus de 2 kilos</p>
   </div>
 
   <a name="processus"></a>
-  <div class="block-processus">
+  <div class="block block-processus">
     <h2>Gestion des processus</h2>
     <p><code>top</code> Classement en live des processus en cours triés par utilisation Proc, Mem ou Temps CPU.</p>
     <p><code>free</code> Afficher la mémoire libre.</p>
     <p><code>ps aux</code> Afficher tous les processus exécutés.</p>
     <p><code>ps faux</code> Afficher tous les processus exécutés affiché sous forme.</p> 
     <p><code>kill pid</code> Arrêter un processus.</p>
-    <p><code>kill ­9 pid</code> Tuer le processus</p> 
+    <p><code>kill ­9 pid</code> Tuer le processus.</p> 
   </div>
 
   <a name="archives"></a>
-  <div class="block-archives">
+  <div class="block block-archives">
     <h2>Archives</h2>
     <h4>Que ce soit pour compresser ou décompresser des fichiers ou des dossiers, cela se fait avec la commande <strong>tar</strong>.</h4>
     <dl>
@@ -254,7 +266,7 @@
   </div>
 
   <a name="Commandes-utiles"></a>
-  <div class="block-utiles">
+  <div class="block block-utiles">
     <h2>Commandes utiles</h2>
     <p>
     </p>
