--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   <a name="ls"></a>
   <div class="block block-ls">
     <h2>ls</h2>
-    <h4>La commande <strong>ls</strong> permet d'afficher le contenu d'un répertoire.</h4>
+    <h4>La commande <i>ls</i> permet d'afficher le contenu d'un répertoire.</h4>
     <p><code>ls -l</code> Afficher les informations de manière détaillée.</p>
     <p><code>ls -a</code> Afficher les fichiers cachés.</p>
     <p><code>ls -h</code> Afficher la taille des fichiers de facon lisible.</p>
@@ -56,7 +56,7 @@
   <a name="cd"></a>
   <div class="block block-cd">
     <h2>cd</h2>
-    <h4>La navigation d’un répertoire à un autre s’effectue avec la commande <strong>cd</strong> succédé du nom du répertoire</h4>
+    <h4>La navigation d’un répertoire à un autre s’effectue avec la commande <i>cd</i> succédé du nom du répertoire</h4>
     <p><code>cd /</code> permet de se retrouver à la racine du disque.</p>
     <p><code>cd /home/</code> ou <code>cd ~</code> accès directement au répertoire de l’utilisateur.</p>
     <p><code>cd /var/www/</code> va dans le repertoire /var/www.</p>
@@ -68,7 +68,7 @@
   <a name="cp"></a>
   <div class="block block-cp">
     <h2>cp</h2>
-    <h4>Pour créer une copie d’un fichier on utilise la commande <strong>cp</strong>.</h4>
+    <h4>Pour créer une copie d’un fichier on utilise la commande <i>cp</i>.</h4>
     <p><code>cp foo/bar.txt baz/bar.txt</code> Copie le fichier bar.txt dans le répertoire baz.<p>
     <p><code>cp -r foo/ baz/</code>Copier des répertoires entiers (recursively).</p>
   </div>
@@ -76,7 +76,7 @@
   <a name="mv"></a>
   <div class="block block-mv">
     <h2>mv</h2>
-    <h4>Déplacer un fichier est aussi simple que de le copier, pour cela il faut utiliser la commande <strong>mv</strong>. Cette commande permet aussi de renommer vos fichiers</h4> 
+    <h4>Déplacer un fichier est aussi simple que de le copier, pour cela il faut utiliser la commande <i>mv</i>. Cette commande permet aussi de renommer vos fichiers</h4> 
     <p><code>mv foo/bar.txt baz/bar.txt</code> Déplacer le fichier bar.txt dans le répertoire baz.</p>
     <p><code>mv foo_bar.txt foo_baz.txt</code> Renommer le fichier foo_bar.txt en foo_baz.txt.</p>
   </div>
@@ -84,7 +84,7 @@
   <a name="rm"></a>
   <div class="block block-rm">
     <h2>rm</h2>
-    <h4>Pour effacer un fichier ou un répertoire on utilise la commande <strong>rm</strong>.</h4>
+    <h4>Pour effacer un fichier ou un répertoire on utilise la commande <i>rm</i>.</h4>
     <p><code>*.txt</code> Supprimer tous les fichiers ayant pour extension txt.</p>
     <p><code>rm foo.txt bar.txt</code> supprime les fichiers foo.txt et bar.txt.</p>
     <p><code>rm -rf baz/</code> supprime tous les fichiers contenu dans le répertoire baz.</p>
@@ -93,7 +93,7 @@
   <a name="mkdir"></a>
   <div class="block block-mkdir">
     <h2>mkdir</h2>
-    <h4>Pour créer un répertoire il suffit d’utiliser la commande <strong>mkdir</strong>. Celle-ci vous permettra de créer un répertoire à l’emplacement ou vous vous trouvez ou à l’emplacement précisé en argumente de la commande.</h4>
+    <h4>Pour créer un répertoire il suffit d’utiliser la commande <i>mkdir</i>. Celle-ci vous permettra de créer un répertoire à l’emplacement ou vous vous trouvez ou à l’emplacement précisé en argumente de la commande.</h4>
     <p><code>mkdir -v</code> Retourne un message pour chaque répertoire crées.</p>
     <p><code>mkdir -p</code> Cette option permet de créer une arborescence complète.</p>
     <p><code>mkdir foo</code> Création du répertoire foo.</p>
@@ -104,14 +104,14 @@
   <a name="chown"></a>
   <div class="block block-chown">
     <h2>chmod</h2>
-    <h4>La commande <strong>chown</strong> permet de changer le propriétaire d'un fichier ou répertoire.</h4>
+    <h4>La commande <i>chown</i> permet de changer le propriétaire d'un fichier ou répertoire.</h4>
     <p><code>chown bob:admin foo.txt</code> attribut le fichier foo.txt à l’utilisateur bob et au groupe admin.</p>
   </div>
 
   <a name="chmod"></a>
   <div class="block block-chmod">
     <h2>chown</h2>
-    <h4>La commande <strong>chown</strong> permet de changer le propriétaire d'un fichier ou répertoire. Pour executer cette commande vous devez etre le propriétaire du fichier ou etre logué en root.</h4>
+    <h4>La commande <i>chown</i> permet de changer le propriétaire d'un fichier ou répertoire. Pour executer cette commande vous devez etre le propriétaire du fichier ou etre logué en root.</h4>
     <p>Methode alphanumérique</p>
     <p><code>chmod u+w fichier</code> Ajouter les droits en écriture au propriétaire (user, write)</p>
     <p><code>chmod g+r fichier</code> Ajouter les droits en lecture au groupe du fichier (group, read)</p>
@@ -141,7 +141,7 @@
   <a name="Packages"></a>
   <div class="block block-packages">
     <h2>Packages</h2>
-    <h4>L'installation et la désinstallation de paquets peut se faire grâce à la commande <strong>apt</strong>.</h4>
+    <h4>L'installation et la désinstallation de paquets peut se faire grâce à la commande <i>apt</i>.</h4>
     <p><code>apt-get update</code> Mettre à jour la liste des fichiers disponibles dans les dépôts APT.</p>
     <p><code>apt-get install samba</code> Installer du paquet Samba.</p>
     <p><code>apt-getp install foo=2.2-1</code> Installer du paquet foo dans sa version 2.2-1.</p>
@@ -154,7 +154,7 @@
   <a name="ssh"></a>
   <div class="block block-ssh">
     <h2>ssh</h2>
-    <h4>La commande <strong>ssh</strong> permet de se connecter de façon sécurisé à une machine distante.</h4>
+    <h4>La commande <i>ssh</i> permet de se connecter de façon sécurisé à une machine distante.</h4>
     <p><code>ssh john@remotehost.example.com</code> Connexion à la machine distante avec le login john.</p>
     <p><code>ssh -l john remotehost.example.com</code> Equivaut à la commande précédente.</p>
     <p><code>ssh-keygen -t dsa</code> Génération d'une clé DSA (à faire sur la machine locale).</p>
@@ -164,7 +164,7 @@
   <a name="scp"></a>
   <div class="block block-scp">
     <h2>scp</h2>
-    <h4>La commande <strong>scp</strong> permet de copier des fichiers entre le serveur et le client ssh d’une manière sécurisée.</h4>
+    <h4>La commande <i>scp</i> permet de copier des fichiers entre le serveur et le client ssh d’une manière sécurisée.</h4>
     <p><code>scp foo.txt john@remotehost.example.com</code> Transfert le fichier foo.txt situé dans le répertoire courant vers le home du compte john de la machine remotehost.example.com.</p>   
     <p><code>scp john@remotehost.example.com:foo.txt</code> Récupère le fichier foo.txt situé dans le home du répertoire du compte john pour le copier dans le repertoire courant.</p>
     <p><code>scp john@remotehost.example.com:/backups/*.sql backups/</code> Récupère tous les fichiers .sql situé dans le répertoire backups pour le copier dans le sous-repertoire backups.</p>
@@ -174,7 +174,7 @@
   <a name="rsync"></a>
   <div class="block block-rsync">
     <h2>rsync</h2>
-    <h4>Grâce à la commande <strong>rsync</strong> vous pouvez copier des fichiers et dossiers un depuis ou vers un hôte à distance. Grâce à cela vous pouvez faire de la synchronisation de fichiers.</h4>
+    <h4>Grâce à la commande <i>rsync</i> vous pouvez copier des fichiers et dossiers un depuis ou vers un hôte à distance. Grâce à cela vous pouvez faire de la synchronisation de fichiers.</h4>
     <dl>
       <dt>Quelques options :</dt>
       <dd>-a: copie de manière récursive tout en préservant les permissions et les dates des fichiers.</dd>
@@ -200,14 +200,22 @@
   <a name="grep"></a>
   <div class="block block-grep">
     <h2>grep</h2>
-    <p>
-    </p>
+    <h4>La commande <strong>grep</strong> permet de rechercher une chaîne de caractères dans un fichier.</h4>
+    <dl>
+      <dt>Quelques options :</dt>
+      <dd>-v: affiche les lignes ne contenant pas la chaîne.</dd>
+      <dd>-c: compte le nombre de lignes contenant la chaîne.</dd>
+      <dd>-n: retourne les lignes préfixées par leur numéro.</dd>
+      <dd>-x: ligne correspondant exactement à la chaîne.</dd>
+      <dd>-l: affiche le nom des fichiers qui contiennent la chaîne.</dd>
+    </dl>
+    <p><code>grep 'text' foo.txt</code> Recherche l'occurence text dans le fichier foo.txt</p>
   </div>
 
   <a name="find"></a>
   <div class="block block-find">
     <h2>find</h2>
-    <h4>La commande <strong>find</strong> permet de chercher des fichiers et éventuellement d'exécuter des commandes sur ceux-ci.</h4>
+    <h4>La commande <i>find</i> permet de chercher des fichiers et éventuellement d'exécuter des commandes sur ceux-ci.</h4>
     <dl>
       <dt>Quelques options :</dt>
       <dd>-name : Recherche d'un fichier par son nom</dd>
@@ -245,7 +253,7 @@
   <a name="archives"></a>
   <div class="block block-archives">
     <h2>Archives</h2>
-    <h4>Que ce soit pour compresser ou décompresser des fichiers ou des dossiers, cela se fait avec la commande <strong>tar</strong>.</h4>
+    <h4>Que ce soit pour compresser ou décompresser des fichiers ou des dossiers, cela se fait avec la commande <i>tar</i>.</h4>
     <dl>
       <dt>Quelques options :</dt>
       <dd>-c: créer</dd>
