--- a/index.html
+++ b/index.html
@@ -124,16 +124,16 @@
     <p><code>mkdir -p foo/bar/baz</code> Créer l’arborescence foo/bar/baz.</p>
   </div>
 
-  <div id="chmod" class="block block-chmod">
-    <a name="chmod"></a>
-    <h2>chmod</h2>
+  <div id="chown" class="block block-Chown">
+    <a name="chown"></a>
+    <h2>chown</h2>
     <h4>La commande <strong><i>chown</i></strong> permet de changer le propriétaire d'un fichier ou d'un répertoire.</h4>
     <p><code>chown bob:admin foo.txt</code> Attribuer l’utilisateur bob et le groupe admin au fichier foo.txt.</p>
   </div>
 
-  <div id="chown" class="block block-chown">
-  <a name="chown"></a>
-    <h2>chown</h2>
+  <div id="chmod" class="block block-chmod">
+  <a name="chmod"></a>
+    <h2>chmod</h2>
     <h4>La commande <strong><i>chown</i></strong> permet de changer le propriétaire d'un fichier ou répertoire. Pour exécuter cette commande vous devez être le propriétaire du fichier ou être logué en root.</h4>
     <p><code>chmod u+w fichier</code> Ajouter les droits d'écriture au propriétaire (user, write)</p>
     <p><code>chmod g+r fichier</code> Ajouter les droits de lecture au groupe du fichier (group, read)</p>
@@ -183,10 +183,10 @@
     <a name="scp"></a>
     <h2>scp</h2>
     <h4>La commande <strong><i>scp</i></strong> permet de copier des fichiers entre le serveur et le client ssh de manière sécurisée.</h4>
-    <p><code>scp foo.txt john@remotehost.example.com</code> Transfert le fichier foo.txt situé dans le répertoire courant vers le home du compte john de la machine remotehost.example.com.</p>   
+    <p><code>scp foo.txt john@remotehost.example.com:</code> Transfert le fichier foo.txt situé dans le répertoire courant vers le home du compte john de la machine remotehost.example.com.</p>   
     <p><code>scp john@remotehost.example.com:foo.txt</code> Récupère le fichier foo.txt situé dans le home du répertoire du compte john pour le copier dans le répertoire courant.</p>
     <p><code>scp john@remotehost.example.com:/backups/*.sql backups/</code> Récupèrer les fichiers .sql situés dans le répertoire backups pour le copier dans le sous-répertoire backups.</p>
-    <p><code>scp -r mails/ john@remotehost.example.com/mails</code> Transfert l'intégralité du répertoire mails vers la machine remotehost.example.com.</p>
+    <p><code>scp -r mails/ john@remotehost.example.com:/mails</code> Transfert l'intégralité du répertoire mails vers la machine remotehost.example.com.</p>
   </div>
 
   <div id="rsync" class="block block-rsync">
@@ -257,7 +257,7 @@
     <p><code>find -name *myfile*.txt -print</code><br /> Rechercher un fichier contenant "myfile" et ayant pour extention ".txt"</p>    
     <p><code>find /usr -type d -print</code><br /> Afficher tous les répertoires de /usr</p>
     <p><code>find $HOME \( -name '*.txt' -o -name '*.pdf' \)</code><br />Afficher tous les fichiers .txt ou .pdf dans le répertoire home de l'utilisateur.</p>
-    <p><code>find $HOME -name *.txt -atime +7 -exec rm {} \;</code><br />Supprimer tous les fichiers .txt ou .pdf qui n'ont pas été accédés depuis plus de 7 jours dans le répertoire home de l'utilisateur.</p>    
+    <p><code>find $HOME -name *.txt -atime +7 -exec rm {} \;</code><br />Supprimer tous les fichiers .txt qui n'ont pas été accédés depuis plus de 7 jours dans le répertoire home de l'utilisateur.</p>    
     <p><code>find $HOME -name '*.txt' -size +4k -exec ls -l {} \;</code><br />Affiche la taille de tous les fichiers de plus de 2 kilos</p>
   </div>
 
