--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<title>Linux - Commandes fondamentales</title>
-  <link href='http://fonts.googleapis.com/css?family=Chelsea+Market|Dancing+Script' rel='stylesheet' type='text/css'>  
+  <link href='http://fonts.googleapis.com/css?family=Chelsea+Market|Dancing+Script' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="css/style.css" type="text/css">
   <script type="text/javascript" src="scripts/jquery-1.7.2.min.js"></script>
   <script type="text/javascript" src="scripts/scroll.js"></script>
@@ -26,29 +26,29 @@
     <h1>Linux - commandes fondamentales</h1>
     <h3>Un petit guide pour bien démarrer avec Linux.</h3>
     <ul class="navlist">
-      <li><a href="#ls">ls</a></li>                                
-      <li><a href="#cd">cd</a></li> 
-      <li><a href="#cp">cp</a></li> 
+      <li><a href="#ls">ls</a></li>
+      <li><a href="#cd">cd</a></li>
+      <li><a href="#cp">cp</a></li>
       <li><a href="#mv">mv</a></li>
       <li><a href="#rm">rm</a></li>
-    </ul>      
+    </ul>
     <ul class="navlist">
-      <li><a href="#mkdir">mkdir</a></li>           
+      <li><a href="#mkdir">mkdir</a></li>
       <li><a href="#chmod">chmod</a></li>
-      <li><a href="#chown">chown</a></li>  
-    </ul>      
+      <li><a href="#chown">chown</a></li>
+    </ul>
     <ul class="navlist">
       <li><a href="#packages">Paquets</a></li>
       <li><a href="#process">Processus</a></li>
       <li><a href="#archives">Archives</a></li>
-    </ul>      
+    </ul>
     <ul class="navlist">
       <li><a href="#ssh">ssh</a></li>
       <li><a href="#scp">scp</a></li>
-      <li><a href="#rsync">rsync</a></li>    
+      <li><a href="#rsync">rsync</a></li>
       <li><a href="#sed">sed</a></li>
       <li><a href="#grep">grep</a></li>
-      <li><a href="#find">find</a></li>                                               
+      <li><a href="#find">find</a></li>
     </ul>
 
     <a href="https://twitter.com/share" class="twitter-share-button" data-text="Linux - Cheatsheet des commandes fondamentales" data-via="juliendubreuil" data-size="large" data-related="juliendubreuil">Tweet</a>
@@ -57,10 +57,12 @@
       Par <a href="http://www.twitter.com/juliendubreuil">Julien Dubreuil</a><br />
       Inspiré du guide de <a href="http://rogerdudler.github.com/git-guide/index.html">Roger Dudler</a> sur Git.
      <img alt="" src="img/arrow.png">
-    </p>      
+    </p>
   </div>
 
-  <a href="#top" id="top-link">Top of page</a>
+  <div id="toTheTop" style="display: block;">
+    <span>Top of page</span>
+  </div>
 
   <div id="ls" class="block block-ls">
     <a name="ls"></a>
@@ -87,7 +89,7 @@
     <p><code>cd -</code> Permet de revenir au répertoire précédent.</p>
     <p><code>pwd</code> Renvoyer le chemin absolu du répertoire courant ce qui est utile puisqu’en général le shell n’affiche que le nom du répertoire courant.</p>
   </div>
-  
+
   <div id="cp" class="block block-cp">
     <a name="cp"></a>
     <h2>cp</h2>
@@ -95,15 +97,15 @@
     <p><code>cp foo/bar.txt baz/bar.txt</code> Copier le fichier bar.txt dans le répertoire baz.<p>
     <p><code>cp -r foo/ baz/</code>Copier des répertoires entiers.</p>
   </div>
-  
+
   <div id="mv" class="block block-mv">
     <a name="mv"></a>
     <h2>mv</h2>
-    <h4>Déplacer un fichier est aussi simple que de le copier, pour cela il faut utiliser la commande <strong><i>mv</i></strong>. Cette commande permet aussi de renommer vos fichiers.</h4> 
+    <h4>Déplacer un fichier est aussi simple que de le copier, pour cela il faut utiliser la commande <strong><i>mv</i></strong>. Cette commande permet aussi de renommer vos fichiers.</h4>
     <p><code>mv foo/bar.txt baz/bar.txt</code> Déplacer le fichier bar.txt dans le répertoire baz.</p>
     <p><code>mv foo_bar.txt foo_baz.txt</code> Renommer le fichier foo_bar.txt en foo_baz.txt.</p>
   </div>
-  
+
   <div id="rm" class="block block-rm">
     <a name="rm"></a>
     <h2>rm</h2>
@@ -183,7 +185,7 @@
     <a name="scp"></a>
     <h2>scp</h2>
     <h4>La commande <strong><i>scp</i></strong> permet de copier des fichiers entre le serveur et le client ssh de manière sécurisée.</h4>
-    <p><code>scp foo.txt john@remotehost.example.com:</code> Transfert le fichier foo.txt situé dans le répertoire courant vers le home du compte john de la machine remotehost.example.com.</p>   
+    <p><code>scp foo.txt john@remotehost.example.com:</code> Transfert le fichier foo.txt situé dans le répertoire courant vers le home du compte john de la machine remotehost.example.com.</p>
     <p><code>scp john@remotehost.example.com:foo.txt</code> Récupère le fichier foo.txt situé dans le home du répertoire du compte john pour le copier dans le répertoire courant.</p>
     <p><code>scp john@remotehost.example.com:/backups/*.sql backups/</code> Récupèrer les fichiers .sql situés dans le répertoire backups pour le copier dans le sous-répertoire backups.</p>
     <p><code>scp -r mails/ john@remotehost.example.com:/mails</code> Transfert l'intégralité du répertoire mails vers la machine remotehost.example.com.</p>
@@ -200,7 +202,7 @@
       <dd><i>-v</i>: affiche tout ce qui se passe pendant le transfert.</dd>
       <dd><i>-e</i>:</dd>
       <dd><i>--delete</i>: efface les fichiers qui n'existent pas chez l'émetteur</dd>
-      <dd><i>--exclude=MOTIF</i>: exclut les fichiers correspondant au motif</dd> 
+      <dd><i>--exclude=MOTIF</i>: exclut les fichiers correspondant au motif</dd>
     </dl>
     <p><code>rsync sources/files destination/files</code> Synchroniser les fichiers sources vers une destination.</p>
     <p><code>rsync -azv john@remotehost.example.com:files/ destination/files</code> Synchroniser les fichiers sources vers une destination.</p>
@@ -216,7 +218,7 @@
     <p><code>sed 's/\t/  /g' file.txt</code> Transformer toutes les tabulations par deux espaces.</p>
     <p><code>sed '/^#/ d' file.txt</code> Supprimer toutes les lignes commancant par #.</p>
     <p><code>sed '/^Bonjour/,/^Au revoir/d' file.txt</code> Supprimer toutes les lignes comprises entre les deux motifs.</p>
-    <p><code>sed -n '/foo/p' file.txt</code> Afficher uniquement les lignes où l'expression est trouvée.</p>     
+    <p><code>sed -n '/foo/p' file.txt</code> Afficher uniquement les lignes où l'expression est trouvée.</p>
   </div>
 
   <div id="grep" class="block block-grep">
@@ -252,14 +254,22 @@
       <dd><i>-a</i>: Opérateur ET</dd>
       <dd><i>-o</i>: Opérateur OU</dd>
       <dd><i>!</i> ou <i>-not</i>: Opérateur NOT</dd>
-    </dl>  
+    </dl>
     <p><code>find myfile* -print</code><br />Rechercher un fichier commençant par "myfile"</p>
-    <p><code>find -name *myfile*.txt -print</code><br /> Rechercher un fichier contenant "myfile" et ayant pour extention ".txt"</p>    
+    <p><code>find -name *myfile*.txt -print</code><br /> Rechercher un fichier contenant "myfile" et ayant pour extention ".txt"</p>
     <p><code>find /usr -type d -print</code><br /> Afficher tous les répertoires de /usr</p>
     <p><code>find $HOME \( -name '*.txt' -o -name '*.pdf' \)</code><br />Afficher tous les fichiers .txt ou .pdf dans le répertoire home de l'utilisateur.</p>
-    <p><code>find $HOME -name *.txt -atime +7 -exec rm {} \;</code><br />Supprimer tous les fichiers .txt qui n'ont pas été accédés depuis plus de 7 jours dans le répertoire home de l'utilisateur.</p>    
+    <p><code>find $HOME -name *.txt -atime +7 -exec rm {} \;</code><br />Supprimer tous les fichiers .txt qui n'ont pas été accédés depuis plus de 7 jours dans le répertoire home de l'utilisateur.</p>
     <p><code>find $HOME -name '*.txt' -size +4k -exec ls -l {} \;</code><br />Affiche la taille de tous les fichiers de plus de 2 kilos</p>
   </div>
+
+  <!--
+  TODO
+  <div id="du" class="block block-du">
+    <a name="du"></a>
+    <h2>du</h2>
+  </div>
+  -->
 
   <div id="archives" class="block block-archives">
     <a name="archives"></a>
@@ -290,16 +300,9 @@
     <p><code>top</code> Classement en live des processus en cours triés par utilisation Proc, Mem ou Temps CPU.</p>
     <p><code>free</code> Afficher la mémoire libre.</p>
     <p><code>ps aux</code> Afficher tous les processus exécutés.</p>
-    <p><code>ps faux</code> Afficher tous les processus exécutés affiché sous forme.</p> 
+    <p><code>ps faux</code> Afficher tous les processus exécutés affiché sous forme.</p>
     <p><code>kill pid</code> Arrêter un processus.</p>
-    <p><code>kill ­9 pid</code> Tuer le processus.</p> 
-  </div>
-
-  <div class="block block-links">
-    <a name="links"></a>
-    <h2>Commandes utiles</h2>
-    <p>
-    </p>
+    <p><code>kill ­9 pid</code> Tuer le processus.</p>
   </div>
 
 </body>
