--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
     <div id="disqus_thread"></div>
     <script type="text/javascript">
         /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
-        var disqus_shortname = 'Linux - commandes fondamentales'; // required: replace example with your forum shortname
+        var disqus_shortname = 'linux-cheatsheet'; // required: replace example with your forum shortname
 
         /* * * DON'T EDIT BELOW THIS LINE * * */
         (function() {
