added disqus integration

--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
   <div id="comment" class="block block-comment">
     <a name="comment"></a>
     <h2>Commentaires</h2>
-    <div id="disqus_thread"></div>
+    <div id="disqus_thread" class="meta"></div>
     <script type="text/javascript">
         /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
         var disqus_shortname = 'linux-cheatsheet'; // required: replace example with your forum shortname
