updated disqus integration

--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
     <p><code>find $HOME -name '*.txt' -size +4k -exec ls -l {} \;</code> Afficher la taille de tous les fichiers de plus de 4 kilos</p>
   </div>
 
-  <div id="archives" class="block block-archives">
+  <div id="archives" class="block block-archives white">
     <a name="archives"></a>
     <h2>Archives</h2>
     <h4>Que ce soit pour compresser ou décompresser des fichiers ou des dossiers, cela se fait avec la commande <strong><i>tar</i></strong>.</h4>
@@ -288,7 +288,7 @@
     <p><code>tar -tf mon_fichier.tar</code> Liste tous les fichiers contenus dans une archive.</p>
   </div>
 
-  <div id="process" class="block block-process">
+  <div id="process" class="block block-process dark-green">
     <a name="process"></a>
     <h2>Gestion des processus</h2>
     <p><code>top</code> Classement en live des processus en cours triés par utilisation Proc, Mem ou Temps CPU.</p>
@@ -352,7 +352,7 @@
   <div id="comment" class="block block-comment">
     <a name="comment"></a>
     <h2>Commentaires</h2>
-    <div id="disqus_thread" class="meta"></div>
+    <div id="disqus_thread"></div>
     <script type="text/javascript">
         /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
         var disqus_shortname = 'linux-cheatsheet'; // required: replace example with your forum shortname
