=added disk usage commands

--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
   <div id="diskspace" class="block block-diskspace light-green">
     <a name="diskspace"></a>
     <h2>Espace disque</h2>
-    <p><code>du -sh dossier1 dossier2</code> connaitre l'espace disque utilisé des deux répertoires.(<em>disk usage</em>).</p>
+    <p><code>du -sh dossier1 dossier2</code> connaitre l'espace disque utilisé des deux répertoires (<em>disk usage</em>).</p>
     <p><code>du -hc --max-depth=1</code> afficher l'espace disque utilisé des fichiers et répertoires contenu dans un répertoire.</p>
     <p><code>df -h</code> afficher l'espace disque disponible (<em>disk free</em>).</p>
   </div>
