Correction de la description de la commande chmod

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
   <div id="chmod" class="block block-chmod light-green">
   <a name="chmod"></a>
     <h2>chmod</h2>
-    <h4>La commande <strong><i>chmod</i></strong> permet de changer le propriétaire d'un fichier ou répertoire. Pour exécuter cette commande vous devez être le propriétaire du fichier ou être logué en root.</h4>
+    <h4>La commande <strong><i>chmod</i></strong> permet de changer les droits d'un fichier ou d'un répertoire. Pour exécuter cette commande vous devez être le propriétaire du fichier ou être logué en root.</h4>
     <p><code>chmod u+w fichier</code> Ajouter les droits d'écriture au propriétaire (user, write)</p>
     <p><code>chmod g+r fichier</code> Ajouter les droits de lecture au groupe du fichier (group, read)</p>
     <p><code>chmod o-x fichier</code> Supprimer les droits d'exécution aux autres utilisateurs (other, execution)</p>
